added service and routing files

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    ra_request_validator.example:
-#        class: RA\RequestValidatorBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    request_validator:
+        class: RA\RequestValidatorBundle\RequestValidator\RequestValidator
+        arguments: ["@request_stack","@validator"]
